tests/ui/derive_bitfield_specifier/invalid_bits_attribute.stderr
error: More than one 'bits' attribute is not permitted
 --> tests/ui/derive_bitfield_specifier/invalid_bits_attribute.rs:5:1
  |
5 | #[bits = 1]
  | ^^^^^^^^^^^

error: could not parse 'bits' attribute
  --> tests/ui/derive_bitfield_specifier/invalid_bits_attribute.rs:12:1
   |
12 | #[bits = 1.0]
   | ^^^^^^^^^^^^^
